--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,9 @@
 name: Generate Snake
 
 on:
-  schedule: # har kuni yangilanishi uchun
-    - cron: "0 0 * * *"
-  workflow_dispatch: # qo'lda ishga tushirish mumkin
+  schedule:
+    - cron: "0 0 * * *"   # Har kuni yangilanadi
+  workflow_dispatch:       # Qo'lda ishga tushirish mumkin
   push:
     branches:
       - main
