--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,8 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # Har kuni yangilanadi
-  workflow_dispatch:       # Qo'lda ishga tushirish mumkin
+    - cron: "0 0 * * *"
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -16,15 +16,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate Snake Animation
-        uses: Platane/snk@v3
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: devulugbek
           outputs: dist/snake.svg
 
-      - name: Push Snake Animation to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit and Push to Main
+        run: |
+          mkdir -p dist
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add dist/snake.svg
+          git commit -m "Generate snake animation"
+          git push
